# Govinda

./: .dockerignore  .gitignore  404.html  AGENTS.md  LICENSE  README.md  govinda_left_toc.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
AGENTS/: index.html
ai-prompts/: index.html
ai-prompts/p1-p2-research-handoff-2026-07-08/: index.html
benchmarks/: analyze.py  compare.py  run_bench.py  run_bench_3tier.sh  testset_access.json
decisions/0001-dcu-sku/: index.html
decisions/0002-testset-access/: index.html
docker/: Dockerfile  compose.yml  requirements.txt
docs/: index.md  learning.md  team-onboarding.md
learning/: index.html
reports/: env-vars.md  optimization-plan.md  submission-readme.md
scripts/: dry_run.py  run_baseline.sh  run_fp8_smoke.sh  run_in_container.sh  show_baseline.py  start_vllm_bench.sh  start_vllm_dev.sh  sweep_block_size.sh  verify_dcu.py  verify_testset_access.py
search/: search_index.json
src/kv_quant/: base.py  (+3 more)
team-onboarding/: index.html
tests/: test_block_size_sweep.py  test_compare.py  test_compile_config.py  test_int8_quant.py  test_kv_quant.py  test_kv_quant_base.py  test_patch_kv_cache_interface.py  test_run_bench.py  test_show_baseline.py  test_triton_decode_attn.py
tools/: codex_checkout_vllm_branch.sh  codex_llmm1_microbench.py  codex_llmm1_shape_sweep.py  codex_qwen35_config_probe.py  codex_run_p0_ab_sequence.sh  codex_run_p0_smoke_once.sh  codex_smoke_p0_gdn.sh  codex_start_vllm_p0.sh  codex_summarize_ab_results.py  codex_wvsplitk_shape_sweep.py  codex_wvsplitkrc_probe.py
(+61 files in other folders)
